Fix logo positioning issue on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1684,7 +1684,11 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
   filter: alpha(opacity=100);
 }
 .brand .airstack {
-  font-size: 40px;
-  top: -15px;
   color: #FFFFFF;
+}
+@media (min-width: 480px) {
+  .brand .airstack {
+    font-size: 40px;
+    top: -15px;
+  }
 }
