--- a/static/less/airstack.less
+++ b/static/less/airstack.less
@@ -11,8 +11,12 @@
     }
   }
   .airstack {
-    font-size: 40px;
-    top: -15px;
-    color: #FFFFFF;
+      color: #FFFFFF;
+  }
+  @media (min-width: 480px) {
+    .airstack {
+      font-size: 40px;
+      top: -15px;
+    }
   }
 }
